--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@joi/date": "^2.1.0",
     "axios": "^1.3.6",
     "chalk": "4.1.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
