--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@joi/date": "^2.1.0",
     "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
     "chalk": "4.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
