--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
     "sequelize": "^6.31.0",
     "typescript": "^5.0.4"
