--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon ./src/app.js",
-    "migrate": "npx sequelize-cli db:create && npx sequelize-cli db:migrate"
+    "migrate": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
+    "start": "node ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -31,8 +32,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
-    "sequelize": "^6.31.0",
-    "typescript": "^5.0.4"
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
