--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_USER=root
 DB_PASS=
 LOG_LEVEL=debug
 LOG_FORMAT=common
+
+HERE_USER_ID=
+HERE_CLIENT_ID=
+HERE_ACCESS_KEY_ID=
+HERE_ACCESS_KEY_SECRET=
+HERE_TOKEN_ENDPOINT_URL=https://account.api.here.com/oauth2/token
