--- a/.github/workflows/deploy-to-glitch.yml
+++ b/.github/workflows/deploy-to-glitch.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "CBEngineer9@users.noreply.github.com"
-          git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
+          # git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
           # git remote add glitch ${{ secrets.GLITCH_REPO }}
           # git push glitch main
