--- a/.github/workflows/deploy-to-glitch.yml
+++ b/.github/workflows/deploy-to-glitch.yml
@@ -3,10 +3,10 @@ name: deploy-to-glitch
 run-name: Pushing to glitch
 on: 
   push:
-    # branches:
-    #   - 'main'
-    tags:
-      - '*'
+    branches:
+      - 'main'
+    # tags:
+    #   - '*'
 jobs:
   push-to-glitch:
     runs-on: ubuntu-latest
