--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "migrate": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "start": "node ./src/app.js"
   },
-  "engines": { 
-    "node": "16.x"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CBEngineer9/resvip.git"
@@ -32,6 +29,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
+    "midtrans-client": "^1.3.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
