--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ HERE_CLIENT_ID=
 HERE_ACCESS_KEY_ID=
 HERE_ACCESS_KEY_SECRET=
 HERE_TOKEN_ENDPOINT_URL=https://account.api.here.com/oauth2/token
+
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY=
